# algorithms

./: .gitignore  .tool-versions  AGENTS.md  Midterm Prospectus.docx  Midterm.docx  README.md  pyproject.toml  repository_url.txt
data/: ObesityDataSet_raw_and_data_sinthetic.xlsx
scripts/: common.sh  run.sh  run_logreg.sh  run_logreg_gridsearch.sh  run_nn.sh  run_nn_gridsearch.sh  run_plot_nn.sh  run_viz.sh  run_xgboost.sh  run_xgboost_gridsearch.sh  setup_mac.sh  test.sh
src/algorithms/: __init__.py  compare_results.py  config.py  example.py  obesity_logreg.py  obesity_logreg_gridsearch.py  obesity_nn.py  obesity_nn_gridsearch.py  obesity_viz.py  obesity_xgboost.py  obesity_xgboost_gridsearch.py  plot_nn_diagram.py
tests/: test_example.py
