[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithms"
version = "0.1.0"
description = "Algorithms in Python"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Adelphi" }]
dependencies = [
  "pandas>=2.0",
  "scikit-learn (>=1.8.0,<2.0.0)",
  "xgboost>=2.0",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.8",
  "pre-commit>=3.6",
  "pandas-stubs>=2.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = [
  "E", "F", "I", "W",    # pycodestyle/pyflakes/isort
  "B",                  # bugbear
  "UP",                 # pyupgrade
  "N",                  # pep8-naming
  "SIM",                # simplify
]
ignore = [
  "N999", # allow any package name
]

[tool.ruff.lint.isort]
known-first-party = ["algorithms"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
packages = ["algorithms"]
strict = true
warn_unreachable = true
warn_no_return = true
no_implicit_reexport = true
pretty = true

